--- a/long-press-test.html
+++ b/long-press-test.html
@@ -15,6 +15,7 @@ const lp = document.getElementById('lp');
 const log = document.getElementById('log');
 
 function mouseDown() {
+  console.log('caught mouse down');
   id = window.setTimeout(longPress, LONGPRESS);
 }
 
@@ -27,6 +28,7 @@ function longPress() {
   log.innerText = 'Long press';
 }
 
+document.addEventListener('mousedown', mouseDown);
 lp.addEventListener('mousedown', mouseDown);
 lp.addEventListener('mouseup', mouseUp);
 
