--- a/long-press-test.html
+++ b/long-press-test.html
@@ -25,7 +25,7 @@ function mouseUp() {
 }
 
 function longPress() {
-  log.innerText = 'Long press';
+  log.innerText = 'Handled long press';
 }
 
 lp.addEventListener('mousedown', mouseDown);
